src/core-crm/main/default/objects/WMA_Facility__c/WMA_Facility__c.object-meta.xml
<CustomObject>
    <label>Facility</label>
    <nameField>
        <displayFormat>Facility-{00000}</displayFormat>
        <label>Facility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>