src/core-crm/main/default/objects/WMA_Facility__c/fields/Campsite__c.field-meta.xml
<CustomField>
    <fullName>Campsite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicable if this facility belongs to a campsite.</description>
    <label>Campsite</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Place__c</field>
            <operation>equals</operation>
            <valueField>WMA_Campsite__c.WMA_Place_of_campsite__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>WMA_Campsite__c</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>