src/core-crm/main/default/objects/WMA_Facility__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The place this facility is located at.</description>
    <label>Place</label>
    <referenceTo>WMA_Place__c</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>