src/core-crm/main/default/objects/WMA_Facility__c/fields/WMA_Facility_Identifier__c.field-meta.xml
<CustomField>
    <fullName>WMA_Facility_Identifier__c</fullName>
    <formula>UPPER(MID(RecordType.DeveloperName,5, 3))  &amp; &quot;-&quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Identifier</label>
    <type>Text</type>
</CustomField>