src/core-crm/main/default/objects/WMA_Facility__c/fields/WMA_Facility_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>WMA_Facility_Location_Type__c</fullName>
    <description>The type of location the facility is installed at.</description>
    <label>Facility Location Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campsite</fullName>
            </value>
            <value>
                <fullName>Place</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>