src/core-crm/main/default/objects/WMA_Facility__c/fields/WMA_Local_Identifier__c.field-meta.xml
<CustomField>
    <fullName>WMA_Local_Identifier__c</fullName>
    <description>The identifier used at the site - for instance a stall number.</description>
    <label>Local Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>