src/core-crm/main/default/objects/WMA_Facility__c/recordTypes/WMA_Shower_Facility.recordType-meta.xml
<RecordType>
    <fullName>WMA_Shower_Facility</fullName>
    <active>true</active>
    <description>A shower facility</description>
    <label>Shower Facility</label>
</RecordType>