src/core-crm/main/default/objects/WMA_Facility__c/validationRules/Campsite_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Campsite_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( WMA_Facility_Location_Type__c , &quot;Campsite&quot;) &amp;&amp;  ISBLANK( Campsite__c )</errorConditionFormula>
    <errorMessage>Enter a campsite.</errorMessage>
</ValidationRule>